mengubah tanggal dan memindahkan folder lomba

--- a/falcon-logic-competition/index.html
+++ b/falcon-logic-competition/index.html
@@ -4,14 +4,14 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <link rel="stylesheet" href="../../src/css/style.css" />
         <link rel="icon" href="../../assets/svg/logo-fp12.svg" />
+        <link rel="stylesheet" href="../../src/css/style.css" />
         <link
             rel="stylesheet"
             href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
         />
 
-        <title>Falcon Project 12 | Falcon Programming Competition</title>
+        <title>Falcon Project 12 | Falcon Logic Competition</title>
     </head>
     <body>
         <header class="header">
@@ -38,43 +38,43 @@
             <!-- =================================== Home =================================== -->
             <div class="contest-home" id="contest-home">
                 <div
-                    class="container box-container-second box-container-contest contest-home-content"
+                    class="container box-container-second box-container-contest box-container-contest contest-home-content"
                 >
                     <div class="contest-home-data-wrapper">
                         <div class="contest-home-data">
                             <h1 class="contest-home-title">
-                                Falcon Programming Competition
+                                Falcon Logic Competition
                             </h1>
                             <div class="contest-home-desc-wrapper">
                                 <h4 class="contest-home-subtitle">
                                     Tentang Lomba
                                 </h4>
                                 <p class="contest-home-desc">
-                                    Falcon Programming adalah ajang kompetisi
-                                    programming yang merupakan bagian dari
-                                    serangkaian acara/kompetisi Falcon Project
-                                    12 yang diadakan oleh Fakultas School of
-                                    Science and Technology (SISTech) Universitas
-                                    Pelita Harapan. Falcon Programming bertujuan
-                                    menguji kemampuan berpikir dan pemecahan
-                                    masalah peserta, serta menjadi wadah
-                                    kompetisi untuk berbagai mahasiswa yang
-                                    memiliki latar belakang programming. Logika
-                                    serta cara pikir dari peserta lomba akan
-                                    diuji melalui serangkaian soal yang
-                                    diberikan oleh panitia Falcon Project 12.
+                                    Falcon Logic Competition merupakan bagian
+                                    dari rangkaian acara Falcon Project 12 yang
+                                    diadakan oleh Fakultas School of Science and
+                                    Technology (SISTech) Universitas Pelita
+                                    Harapan. Falcon Logic Competition bertujuan
+                                    menguji kemampuan peserta dalam berpikir dan
+                                    memecahkan masalah, serta menjadi wadah
+                                    siswa/siswi tingkat SMA atau sederajat dalam
+                                    berlogika. Logika dan cara pikir peserta
+                                    lomba akan diuji melalui serangkaian soal
+                                    yang diberikan oleh panitia Falcon Project
+                                    12. Peserta harus menganalisa dan
+                                    menyelesaikan soal yang telah diberikan
+                                    menggunakan perhitungan sederhana yang
+                                    melibatkan logika.
                                     <br />
                                     <br />
-                                    Peserta harus menganalisa dan menyelesaikan
-                                    soal yang telah diberikan menggunakan bahasa
-                                    pemrograman Pascal, C/C++, Java, dan Python.
-                                    Peserta juga harus memperhatikan jumlah
-                                    memori serta batas waktu yang diberikan
-                                    untuk setiap soal. Peserta yang lolos pada
-                                    tahap penyisihan yang diselengarakan secara
-                                    online akan lanjut ke tahap selanjutnya yang
-                                    akan diselengarakan secara on-site di lokasi
-                                    UPH (Universitas Pelita Harapan).
+                                    Falcon Logic Competition diperuntukkan bagi
+                                    siswa/siswi SMA, SMK, dan sederajat seluruh
+                                    Indonesia dan bersifat individu. Peserta
+                                    akan mengikuti penyisihan secara online dan
+                                    peserta yang lolos babak penyisihan akan
+                                    masuk ke tahap selanjutnya yang akan
+                                    dilaksanakan secara on-site di Universitas
+                                    Pelita Harapan Main Campus, Lippo Village.
                                 </p>
                             </div>
                             <div class="contest-home-btns">
@@ -85,7 +85,7 @@
                                     >Daftar Sekarang</a
                                 >
                                 <a
-                                    href="https://drive.google.com/file/d/1f3rDth1qUChqmdWjavHj95CFp8YoiMUA/view?usp=sharing"
+                                    href="https://drive.google.com/file/d/1yr84POm9m-02BxCUgD7WiVxZCei9AMGa/view?usp=sharing"
                                     target="_blank"
                                     class="contest-home-btn-second btn"
                                     >Download Rulebook</a
@@ -94,7 +94,7 @@
                         </div>
                         <div class="contest-home-cover">
                             <img
-                                src="../../assets/img/Logo Lomba/Falcon Programming.png"
+                                src="../../assets/img/Logo Lomba/Falcon Logic.png"
                                 alt=""
                             />
                         </div>
@@ -108,51 +108,45 @@
                         <div class="timeline-title">
                             <div class="section-title">TIMELINE</div>
                             <div class="section-subtitle">
-                                Timeline Falcon Programming Competition
+                                Timeline Falcon Logic Competition
                             </div>
                         </div>
                         <div class="section-desc timeline-desc">
-                            Tahapan Lomba Falcon Programming Competition terdiri
-                            dari
+                            Tahapan Lomba Falcon Logic Competition terdiri dari
                         </div>
                     </div>
                     <div class="timeline-main">
                         <span class="timeline-middle-line"> </span>
                         <div class="timeline-item">
                             <h4 class="timeline-item-title">
-                                Pendaftaran(Early Bird)
+                                Pendaftaran (Early Bird)
                             </h4>
                             <span class="timeline-rounded">
                                 <div class="timeline-rounded-center"></div>
                             </span>
-                            <div class="timeline-item-date">26 Sep - 9 Oct</div>
+                            <div class="timeline-item-date">
+                                26 Sep - 23 Oct
+                            </div>
                         </div>
                         <div class="timeline-item">
                             <h4 class="timeline-item-title">
-                                Pendaftaran(Normal)
+                                Pendaftaran (Normal)
                             </h4>
                             <span class="timeline-rounded">
                                 <div class="timeline-rounded-center"></div>
                             </span>
-                            <div class="timeline-item-date">9 Oct - 23 Oct</div>
+                            <div class="timeline-item-date">
+                                24 Oct - 13 Nov
+                            </div>
                         </div>
                         <div class="timeline-item">
                             <h4 class="timeline-item-title">
-                                Warm UP (online)
+                                Babak Benyisihan (online)
                             </h4>
                             <span class="timeline-rounded">
                                 <div class="timeline-rounded-center"></div>
                             </span>
-                            <div class="timeline-item-date">27 Okt</div>
-                        </div>
-                        <div class="timeline-item">
-                            <h4 class="timeline-item-title">
-                                Penyisihan (online)
-                            </h4>
-                            <span class="timeline-rounded">
-                                <div class="timeline-rounded-center"></div>
-                            </span>
-                            <div class="timeline-item-date">28 Okt</div>
+                            <div class="timeline-item-date">16 Nov</div>
                         </div>
                         <div class="timeline-item">
                             <h4 class="timeline-item-title">
@@ -161,7 +155,16 @@
                             <span class="timeline-rounded">
                                 <div class="timeline-rounded-center"></div>
                             </span>
-                            <div class="timeline-item-date">3 Nov</div>
+                            <div class="timeline-item-date">23 Nov</div>
+                        </div>
+                        <div class="timeline-item">
+                            <h4 class="timeline-item-title">
+                                Technical Meeting
+                            </h4>
+                            <span class="timeline-rounded">
+                                <div class="timeline-rounded-center"></div>
+                            </span>
+                            <div class="timeline-item-date">26 Nov</div>
                         </div>
                         <div class="timeline-item">
                             <h4 class="timeline-item-title">
@@ -170,7 +173,9 @@
                             <span class="timeline-rounded">
                                 <div class="timeline-rounded-center"></div>
                             </span>
-                            <div class="timeline-item-date">11 Nov</div>
+                            <div class="timeline-item-date">
+                                28 Nov & 29 Nov
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -185,12 +190,12 @@
                         <div class="registration-title-wrapper">
                             <h4 class="section-title">REGISTRATION</h4>
                             <h2 class="section-subtitle">
-                                Pendaftaran Lomba Falcon Programming Competition
+                                Pendaftaran Lomba Falcon Logic Competition
                             </h2>
                         </div>
                         <p class="section-desc">
                             Adapun rincian harga pendaftaran dari lomba
-                            <b><i>Falcon Programming Competition</i></b>
+                            <b><i>Falcon Logic Competition</i></b>
                         </p>
                     </div>
 
@@ -233,7 +238,7 @@
                                 </div>
                                 <div class="prizepool-prize-wrapper">
                                     <h2 class="prizepool-prize text-price-dark">
-                                        Rp.4.000.000,-
+                                        Rp.3.000.000,-
                                     </h2>
                                 </div>
                             </div>
@@ -247,7 +252,7 @@
                                 </div>
                                 <div class="prizepool-prize-wrapper">
                                     <h2 class="prizepool-prize text-price-dark">
-                                        Rp.2.500.000,-
+                                        Rp.2.000.000,-
                                     </h2>
                                 </div>
                             </div>
@@ -263,7 +268,7 @@
                                     <h2
                                         class="prizepool-prize text-price-light"
                                     >
-                                        Rp.1.500.000,-
+                                        Rp.1.000.000,-
                                     </h2>
                                 </div>
                             </div>
