--- a/falcon-programming/index.html
+++ b/falcon-programming/index.html
@@ -4,14 +4,14 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <link rel="icon" href="../../assets/svg/logo-fp12.svg" />
         <link rel="stylesheet" href="../../src/css/style.css" />
+        <link rel="icon" href="../../assets/svg/logo-fp12.svg" />
         <link
             rel="stylesheet"
             href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
         />
 
-        <title>Falcon Project 12 | Falcon Business Proposal Competition</title>
+        <title>Falcon Project 12 | Falcon Programming Competition</title>
     </head>
     <body>
         <header class="header">
@@ -38,41 +38,45 @@
             <!-- =================================== Home =================================== -->
             <div class="contest-home" id="contest-home">
                 <div
-                    class="container box-container-second box-container-contest box-container-contest contest-home-content"
+                    class="container box-container-second box-container-contest contest-home-content"
                 >
                     <div class="contest-home-data-wrapper">
                         <div class="contest-home-data">
                             <h1 class="contest-home-title">
-                                Falcon Business Proposal Competition
+                                Falcon Programming Competition
                             </h1>
                             <div class="contest-home-desc-wrapper">
                                 <h4 class="contest-home-subtitle">
                                     Tentang Lomba
                                 </h4>
                                 <p class="contest-home-desc">
-                                    Falcon Business Proposal Competition
-                                    Merupakan ajang kompetisi dimana peserta
-                                    harus mengembangkan ide dalam membuat
-                                    rancangan bisnis dengan tema yang telah
-                                    ditentukan oleh panitia untuk menguji
-                                    kreativitas dan keinovatifan mereka. Peserta
-                                    terdiri dari 2-4 orang per kelompok dari SMA
-                                    dan Universitas.
+                                    Falcon Programming Competition adalah ajang
+                                    kompetisi programming yang merupakan bagian
+                                    dari serangkaian acara/kompetisi Falcon
+                                    Project 12 yang diadakan oleh Fakultas
+                                    School of Science and Technology (SISTech)
+                                    Universitas Pelita Harapan. Falcon
+                                    Programming Competition bertujuan menguji
+                                    kemampuan berpikir dan pemecahan masalah
+                                    peserta, serta menjadi wadah kompetisi untuk
+                                    berbagai siswa/siswi yang memiliki latar
+                                    belakang programming. Logika serta cara
+                                    pikir dari peserta lomba akan diuji melalui
+                                    serangkaian soal yang diberikan oleh panitia
+                                    Falcon Project 12.
                                     <br />
                                     <br />
-                                    Tahap penyisihan dilakukan secara online.
-                                    Peserta akan mempersiapkan proposal ide
-                                    sesuai dengan tema yang telah ditentukan
-                                    oleh panitia lalu hasilnya dikirimkan
-                                    melalui email. Pada tahap seleksi, juri akan
-                                    memilih ½ dari tim yang telah mendaftar pada
-                                    kategori SMA dan Universitas dengan ide
-                                    terbaik. Peserta yang masuk tahap final yang
-                                    diselengarakan secara on-site di lokasi UPH
-                                    (Universitas Pelita Harapan) akan
-                                    mempresentasikan ide dan prototypenya
-                                    tentang produk yang dirancang di hadapan
-                                    para juri yang berperan sebagai Investor.
+                                    Peserta harus menganalisa dan menyelesaikan
+                                    soal yang telah diberikan menggunakan bahasa
+                                    pemrograman C/C++, Java, dan Python. Peserta
+                                    juga harus memperhatikan jumlah memori serta
+                                    batas waktu yang diberikan untuk setiap
+                                    soal. Peserta yang lolos pada tahap
+                                    penyisihan yang diselenggarakan secara
+                                    online akan lanjut ke tahap selanjutnya yang
+                                    akan diselenggarakan secara on-site di
+                                    Universitas Pelita Harapan Main Campus,
+                                    Lippo Village.
                                 </p>
                             </div>
                             <div class="contest-home-btns">
@@ -83,7 +87,7 @@
                                     >Daftar Sekarang</a
                                 >
                                 <a
-                                    href="https://drive.google.com/file/d/1ToOISJu4uHI1ANbQGmZzwNsJktkbw73K/view?usp=sharing"
+                                    href="https://drive.google.com/file/d/1f3rDth1qUChqmdWjavHj95CFp8YoiMUA/view?usp=sharing"
                                     target="_blank"
                                     class="contest-home-btn-second btn"
                                     >Download Rulebook</a
@@ -92,7 +96,7 @@
                         </div>
                         <div class="contest-home-cover">
                             <img
-                                src="../../assets/img/Logo Lomba/Falcon Business.png"
+                                src="../../assets/img/Logo Lomba/Falcon Programming.png"
                                 alt=""
                             />
                         </div>
@@ -106,44 +110,55 @@
                         <div class="timeline-title">
                             <div class="section-title">TIMELINE</div>
                             <div class="section-subtitle">
-                                Timeline Falcon Business Proposal
+                                Timeline Falcon Programming Competition
                             </div>
                         </div>
                         <div class="section-desc timeline-desc">
-                            Tahapan Lomba Falcon Business Proposal terdiri dari
+                            Tahapan Lomba Falcon Programming Competition terdiri
+                            dari
                         </div>
                     </div>
                     <div class="timeline-main">
                         <span class="timeline-middle-line"> </span>
                         <div class="timeline-item">
                             <h4 class="timeline-item-title">
-                                Pendaftaran(Early Bird)
-                            </h4>
-                            <span class="timeline-rounded">
-                                <div class="timeline-rounded-center"></div>
-                            </span>
-                            <div class="timeline-item-date">26 Sep - 9 Oct</div>
-                        </div>
-                        <div class="timeline-item">
-                            <h4 class="timeline-item-title">
-                                Pendaftaran(Normal)
-                            </h4>
-                            <span class="timeline-rounded">
-                                <div class="timeline-rounded-center"></div>
-                            </span>
-                            <div class="timeline-item-date">9 Oct - 23 Oct</div>
-                        </div>
-
-                        <div class="timeline-item">
-                            <h4 class="timeline-item-title">
-                                Babak Benyisihan (online)
+                                Pendaftaran (Early Bird)
                             </h4>
                             <span class="timeline-rounded">
                                 <div class="timeline-rounded-center"></div>
                             </span>
                             <div class="timeline-item-date">
-                                24 Oct - 30 Okt
+                                26 Sep - 23 Oct
                             </div>
+                        </div>
+                        <div class="timeline-item">
+                            <h4 class="timeline-item-title">
+                                Pendaftaran (Normal)
+                            </h4>
+                            <span class="timeline-rounded">
+                                <div class="timeline-rounded-center"></div>
+                            </span>
+                            <div class="timeline-item-date">
+                                24 Oct - 13 Nov
+                            </div>
+                        </div>
+                        <div class="timeline-item">
+                            <h4 class="timeline-item-title">
+                                Warm UP (online)
+                            </h4>
+                            <span class="timeline-rounded">
+                                <div class="timeline-rounded-center"></div>
+                            </span>
+                            <div class="timeline-item-date">17 Nov</div>
+                        </div>
+                        <div class="timeline-item">
+                            <h4 class="timeline-item-title">
+                                Penyisihan (online)
+                            </h4>
+                            <span class="timeline-rounded">
+                                <div class="timeline-rounded-center"></div>
+                            </span>
+                            <div class="timeline-item-date">18 Nov</div>
                         </div>
                         <div class="timeline-item">
                             <h4 class="timeline-item-title">
@@ -152,7 +167,7 @@
                             <span class="timeline-rounded">
                                 <div class="timeline-rounded-center"></div>
                             </span>
-                            <div class="timeline-item-date">3 Nov</div>
+                            <div class="timeline-item-date">23 Nov</div>
                         </div>
                         <div class="timeline-item">
                             <h4 class="timeline-item-title">
@@ -161,7 +176,7 @@
                             <span class="timeline-rounded">
                                 <div class="timeline-rounded-center"></div>
                             </span>
-                            <div class="timeline-item-date">9 Nov</div>
+                            <div class="timeline-item-date">2 Dec</div>
                         </div>
                     </div>
                 </div>
@@ -176,13 +191,12 @@
                         <div class="registration-title-wrapper">
                             <h4 class="section-title">REGISTRATION</h4>
                             <h2 class="section-subtitle">
-                                Pendaftaran Lomba Falcon Business Proposal
-                                Competition
+                                Pendaftaran Lomba Falcon Programming Competition
                             </h2>
                         </div>
                         <p class="section-desc">
                             Adapun rincian harga pendaftaran dari lomba
-                            <b><i>Falcon Business Proposal Competition</i></b>
+                            <b><i>Falcon Programming Competition</i></b>
                         </p>
                     </div>
 
@@ -190,14 +204,14 @@
                         <div class="registration-prize-wrapper">
                             <p class="registration-prize-title">Early Bird :</p>
                             <h2 class="registration-prize-prize">
-                                Rp.125.000,-
+                                Rp.60.000,-
                             </h2>
                         </div>
                         <div class="registration-prize-line"></div>
                         <div class="registration-prize-wrapper">
                             <p class="registration-prize-title">Normal :</p>
                             <h2 class="registration-prize-prize">
-                                Rp.155.000,-
+                                Rp.80.000,-
                             </h2>
                         </div>
                     </div>
@@ -239,7 +253,7 @@
                                 </div>
                                 <div class="prizepool-prize-wrapper">
                                     <h2 class="prizepool-prize text-price-dark">
-                                        Rp.3.000.000,-
+                                        Rp.2.500.000,-
                                     </h2>
                                 </div>
                             </div>
@@ -255,7 +269,7 @@
                                     <h2
                                         class="prizepool-prize text-price-light"
                                     >
-                                        Rp.2.000.000,-
+                                        Rp.1.500.000,-
                                     </h2>
                                 </div>
                             </div>
