--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                                 dan kreativitas yang dimiliki peserta
                             </div>
                             <a
-                                href="src/pages/falcon-webdesign.html"
+                                href="/falcon-web-design"
                                 class="competition-item-btn"
                             >
                                 Detail Lomba
@@ -187,7 +187,7 @@
                                 SMA atau sederajat dalam berlogika
                             </div>
                             <a
-                                href="src/pages/falcon-logic.html"
+                                href="/falcon-logic-competition"
                                 class="competition-item-btn"
                             >
                                 Detail Lomba
@@ -214,7 +214,7 @@
                                 yang memiliki latar belakang programming
                             </div>
                             <a
-                                href="src/pages/falcon-programming.html"
+                                href="/falcon-programming/"
                                 class="competition-item-btn"
                             >
                                 Detail Lomba
@@ -241,7 +241,7 @@
                                 dengan tema tertentu
                             </div>
                             <a
-                                href="src/pages/falcon-businessproposal.html"
+                                href="/falcon-business-proposal/"
                                 class="competition-item-btn"
                             >
                                 Detail Lomba
@@ -277,18 +277,20 @@
                     <div class="timeline-main">
                         <span class="timeline-middle-line"> </span>
                         <div class="timeline-item">
-                            <h4 class="timeline-item-title">Opening</h4>
+                            <h4 class="timeline-item-title">Opening FP12</h4>
                             <span class="timeline-rounded">
                                 <div class="timeline-rounded-center"></div>
                             </span>
-                            <div class="timeline-item-date">1 Nov</div>
+                            <div class="timeline-item-date">21 Nov</div>
                         </div>
                         <div class="timeline-item">
-                            <h4 class="timeline-item-title">Falcon Talkshow</h4>
+                            <h4 class="timeline-item-title">
+                                Grand Falcon Talkshow
+                            </h4>
                             <span class="timeline-rounded">
                                 <div class="timeline-rounded-center"></div>
                             </span>
-                            <div class="timeline-item-date">3 Nov</div>
+                            <div class="timeline-item-date">21 Nov</div>
                         </div>
                         <div class="timeline-item">
                             <h4 class="timeline-item-title">
@@ -297,23 +299,23 @@
                             <span class="timeline-rounded">
                                 <div class="timeline-rounded-center"></div>
                             </span>
-                            <div class="timeline-item-date">7 Okt - 11 Sep</div>
+                            <div class="timeline-item-date">
+                                14 Nov - 19 Sep
+                            </div>
                         </div>
                         <div class="timeline-item">
                             <h4 class="timeline-item-title">Competition</h4>
                             <span class="timeline-rounded">
                                 <div class="timeline-rounded-center"></div>
                             </span>
-                            <div class="timeline-item-date">
-                                24 Okt - 11 Nov
-                            </div>
+                            <div class="timeline-item-date">14 Okt - 2 Dec</div>
                         </div>
                         <div class="timeline-item">
                             <h4 class="timeline-item-title">Close Night</h4>
                             <span class="timeline-rounded">
                                 <div class="timeline-rounded-center"></div>
                             </span>
-                            <div class="timeline-item-date">12 Nov</div>
+                            <div class="timeline-item-date">3 Dec</div>
                         </div>
                     </div>
                 </div>
