--- a/falcon-business-proposal/index.html
+++ b/falcon-business-proposal/index.html
@@ -4,14 +4,14 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <link rel="stylesheet" href="../../src/css/style.css" />
         <link rel="icon" href="../../assets/svg/logo-fp12.svg" />
+        <link rel="stylesheet" href="../../src/css/style.css" />
         <link
             rel="stylesheet"
             href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
         />
 
-        <title>Falcon Project 12 | Falcon Web Design Competition</title>
+        <title>Falcon Project 12 | Falcon Business Proposal Competition</title>
     </head>
     <body>
         <header class="header">
@@ -27,7 +27,7 @@
                     <a href="../../index.html#competition" class="join-btn"
                         >Home</a
                     >
-                    <div class="nav-toggle d-none d-none" id="nav-toggle">
+                    <div class="nav-toggle d-none" id="nav-toggle">
                         <i class="uil uil-apps"></i>
                     </div>
                 </div>
@@ -38,37 +38,46 @@
             <!-- =================================== Home =================================== -->
             <div class="contest-home" id="contest-home">
                 <div
-                    class="container box-container-second box-container-contest contest-home-content"
+                    class="container box-container-second box-container-contest box-container-contest contest-home-content"
                 >
                     <div class="contest-home-data-wrapper">
                         <div class="contest-home-data">
                             <h1 class="contest-home-title">
-                                Falcon Web Design Competition
+                                Falcon Business Proposal Competition
                             </h1>
                             <div class="contest-home-desc-wrapper">
                                 <h4 class="contest-home-subtitle">
                                     Tentang Lomba
                                 </h4>
                                 <p class="contest-home-desc">
-                                    Falcon Web Design merupakan bagian dari
-                                    serangkaian acara Falcon Project 12 yang
-                                    diadakan oleh Fakultas School of Science and
-                                    Technology (SISTech) Universitas Pelita
-                                    Harapan. Peserta ditugaskan untuk
-                                    menciptakan sebuah desain web dengan tema
-                                    tertentu untuk menguji keinovatifan dan
-                                    kreativitas peserta.
+                                    Falcon Business Proposal Competition
+                                    Merupakan ajang kompetisi di mana peserta
+                                    harus mengembangkan ide dalam membuat
+                                    rancangan bisnis dengan tema yang telah
+                                    ditentukan oleh panitia untuk menguji
+                                    kreativitas dan keinovatifan mereka. Peserta
+                                    terdiri dari 2-3 orang per kelompok. Tujuan
+                                    dari Falcon Business Proposal Competition
+                                    adalah membantu peserta untuk mendapat
+                                    pengalaman mengembangkan bisnis dengan
+                                    kreativitas dan inovasi dari sekarang.
                                     <br />
                                     <br />
-                                    Falcon Web Design diperuntukkan bagi
-                                    mahasiswa dari berbagai universitas seluruh
-                                    Indonesia dan bersifat kelompok yang terdiri
-                                    dari 3 orang. Peserta akan mengirimkan hasil
-                                    desain web. 10 desain terbaik akan diundang
-                                    ke tahap final untuk membuat desain website
-                                    dengan tema yang sudah ditentukan panitia
-                                    secara on-site di lokasi UPH (Universitas
-                                    Pelita Harapan).
+                                    Tahap penyisihan dilakukan secara online.
+                                    Peserta akan mempersiapkan proposal ide
+                                    sesuai dengan tema yang telah ditentukan
+                                    oleh panitia lalu hasilnya dikirimkan
+                                    melalui email. Pada tahap seleksi, juri akan
+                                    memilih tim yang berhak lolos ke tahap
+                                    selanjutnya dari tim yang telah mendaftar
+                                    pada kategori SMA dan Universitas dengan ide
+                                    terbaik. Peserta yang masuk tahap final yang
+                                    diselenggarakan secara on-site di
+                                    Universitas Pelita Harapan Main Campus,
+                                    Lippo Village akan mempresentasikan ide dan
+                                    prototype-nya tentang produk yang dirancang
+                                    di hadapan para juri yang berperan sebagai
+                                    Investor.
                                 </p>
                             </div>
                             <div class="contest-home-btns">
@@ -79,7 +88,7 @@
                                     >Daftar Sekarang</a
                                 >
                                 <a
-                                    href="https://drive.google.com/file/d/1XdHcJoKXbt-ZluEGYa2yZTPfctQ7S1OX/view?usp=sharing"
+                                    href="https://drive.google.com/file/d/1ToOISJu4uHI1ANbQGmZzwNsJktkbw73K/view?usp=sharing"
                                     target="_blank"
                                     class="contest-home-btn-second btn"
                                     >Download Rulebook</a
@@ -88,7 +97,7 @@
                         </div>
                         <div class="contest-home-cover">
                             <img
-                                src="../../assets/img/Logo Lomba/Falcon Web Design.png"
+                                src="../../assets/img/Logo Lomba/Falcon Business.png"
                                 alt=""
                             />
                         </div>
@@ -102,42 +111,47 @@
                         <div class="timeline-title">
                             <div class="section-title">TIMELINE</div>
                             <div class="section-subtitle">
-                                Timeline Falcon Web Design
+                                Timeline Falcon Business Proposal
                             </div>
                         </div>
                         <div class="section-desc timeline-desc">
-                            Tahapan Lomba Falcon Project 12 terdiri dari
+                            Tahapan Lomba Falcon Business Proposal terdiri dari
                         </div>
                     </div>
                     <div class="timeline-main">
                         <span class="timeline-middle-line"> </span>
                         <div class="timeline-item">
                             <h4 class="timeline-item-title">
-                                Pendaftaran(Early Bird)
-                            </h4>
-                            <span class="timeline-rounded">
-                                <div class="timeline-rounded-center"></div>
-                            </span>
-                            <div class="timeline-item-date">26 Sep - 9 Oct</div>
-                        </div>
-                        <div class="timeline-item">
-                            <h4 class="timeline-item-title">
-                                Pendaftaran(Normal)
-                            </h4>
-                            <span class="timeline-rounded">
-                                <div class="timeline-rounded-center"></div>
-                            </span>
-                            <div class="timeline-item-date">9 Oct - 23 Oct</div>
-                        </div>
-                        <div class="timeline-item">
-                            <h4 class="timeline-item-title">
-                                Babak Benyisihan (online)
+                                Pendaftaran (Early Bird)
                             </h4>
                             <span class="timeline-rounded">
                                 <div class="timeline-rounded-center"></div>
                             </span>
                             <div class="timeline-item-date">
-                                24 Oct - 30 Okt
+                                26 Sep - 23 Oct
+                            </div>
+                        </div>
+                        <div class="timeline-item">
+                            <h4 class="timeline-item-title">
+                                Pendaftaran (Normal)
+                            </h4>
+                            <span class="timeline-rounded">
+                                <div class="timeline-rounded-center"></div>
+                            </span>
+                            <div class="timeline-item-date">
+                                24 Oct - 13 Nov
+                            </div>
+                        </div>
+
+                        <div class="timeline-item">
+                            <h4 class="timeline-item-title">
+                                Batas Pengumpulan (Penyisihan)
+                            </h4>
+                            <span class="timeline-rounded">
+                                <div class="timeline-rounded-center"></div>
+                            </span>
+                            <div class="timeline-item-date">
+                                14 Nov - 19 Nov
                             </div>
                         </div>
                         <div class="timeline-item">
@@ -147,7 +161,7 @@
                             <span class="timeline-rounded">
                                 <div class="timeline-rounded-center"></div>
                             </span>
-                            <div class="timeline-item-date">3 Nov</div>
+                            <div class="timeline-item-date">23 Nov</div>
                         </div>
                         <div class="timeline-item">
                             <h4 class="timeline-item-title">
@@ -156,7 +170,7 @@
                             <span class="timeline-rounded">
                                 <div class="timeline-rounded-center"></div>
                             </span>
-                            <div class="timeline-item-date">10 Nov</div>
+                            <div class="timeline-item-date">30 Nov</div>
                         </div>
                     </div>
                 </div>
@@ -171,12 +185,13 @@
                         <div class="registration-title-wrapper">
                             <h4 class="section-title">REGISTRATION</h4>
                             <h2 class="section-subtitle">
-                                Pendaftaran Lomba Falcon Web Design Competition
+                                Pendaftaran Lomba Falcon Business Proposal
+                                Competition
                             </h2>
                         </div>
                         <p class="section-desc">
                             Adapun rincian harga pendaftaran dari lomba
-                            <b><i>Falcon Web Design Competition</i></b>
+                            <b><i>Falcon Business Proposal Competition</i></b>
                         </p>
                     </div>
 
@@ -233,7 +248,7 @@
                                 </div>
                                 <div class="prizepool-prize-wrapper">
                                     <h2 class="prizepool-prize text-price-dark">
-                                        Rp.2.500.000,-
+                                        Rp.3.000.000,-
                                     </h2>
                                 </div>
                             </div>
@@ -249,7 +264,7 @@
                                     <h2
                                         class="prizepool-prize text-price-light"
                                     >
-                                        Rp.1.500.000,-
+                                        Rp.2.000.000,-
                                     </h2>
                                 </div>
                             </div>
