--- a/falcon-web-design/index.html
+++ b/falcon-web-design/index.html
@@ -4,14 +4,14 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <link rel="icon" href="../../assets/svg/logo-fp12.svg" />
         <link rel="stylesheet" href="../../src/css/style.css" />
+        <link rel="icon" href="../../assets/svg/logo-fp12.svg" />
         <link
             rel="stylesheet"
             href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
         />
 
-        <title>Falcon Project 12 | Falcon Logic Competition</title>
+        <title>Falcon Project 12 | Falcon Web Design Competition</title>
     </head>
     <body>
         <header class="header">
@@ -27,7 +27,7 @@
                     <a href="../../index.html#competition" class="join-btn"
                         >Home</a
                     >
-                    <div class="nav-toggle d-none" id="nav-toggle">
+                    <div class="nav-toggle d-none d-none" id="nav-toggle">
                         <i class="uil uil-apps"></i>
                     </div>
                 </div>
@@ -38,43 +38,38 @@
             <!-- =================================== Home =================================== -->
             <div class="contest-home" id="contest-home">
                 <div
-                    class="container box-container-second box-container-contest box-container-contest contest-home-content"
+                    class="container box-container-second box-container-contest contest-home-content"
                 >
                     <div class="contest-home-data-wrapper">
                         <div class="contest-home-data">
                             <h1 class="contest-home-title">
-                                Falcon Logic Competition
+                                Falcon Web Design Competition
                             </h1>
                             <div class="contest-home-desc-wrapper">
                                 <h4 class="contest-home-subtitle">
                                     Tentang Lomba
                                 </h4>
                                 <p class="contest-home-desc">
-                                    Falcon Logic Competition merupakan bagian
-                                    dari rangkaian acara Falcon Project 12 yang
-                                    diadakan oleh Fakultas School of Science and
-                                    Technology (SISTech) Universitas Pelita
-                                    Harapan. Falcon Logic Competition bertujuan
-                                    menguji kemampuan peserta dalam berpikir dan
-                                    memecahkan masalah, serta menjadi wadah
-                                    siswa/siswi tingkat SMA atau sederajat dalam
-                                    berlogika. Logika dan cara pikir peserta
-                                    lomba akan diuji melalui serangkaian soal
-                                    yang diberikan oleh panitia Falcon Project
-                                    10. Peserta harus menganalisa dan
-                                    menyelesaikan soal yang telah diberikan
-                                    menggunakan perhitungan sederhana yang
-                                    melibatkan logika.
+                                    Falcon Web Design Competition merupakan
+                                    sebuah kompetisi mendesain sebuah website
+                                    baru bagi mahasiswa/i universitas, dengan
+                                    ruang lingkup Nasional yang diselenggarakan
+                                    oleh School of Information Science and
+                                    Technology, Universitas Pelita Harapan
+                                    sebagai bagian dari acara Falcon Project 12.
+                                    Falcon Web Design bertujuan untuk menguji
+                                    kreativitas para peserta dalam mendesain
+                                    sebuah web dengan tema yang telah
+                                    ditentukan.
                                     <br />
                                     <br />
-                                    Falcon Logic Competition diperuntukkan bagi
-                                    siswa/siswi SMA, SMK, dan sederajat seluruh
-                                    Indonesia dan bersifat individu. Peserta
-                                    akan mengikuti penyisihan secara online dan
-                                    peserta yang lolos dari tahap penyisihan
-                                    akan diundang ke tahap selanjutnya yang akan
-                                    diselenggarakan secara on-site di lokasi UPH
-                                    (Universitas Pelita Harapan).
+                                    Kompetisi ini akan dibagi menjadi dua babak
+                                    yaitu Penyisihan dan Final. Babak Penyisihan
+                                    dilaksanakan secara online dengan melakukan
+                                    pengumpulan desain disertai penjelasan dalam
+                                    bentuk paragraf. Sedangkan, Babak Final
+                                    dilaksanakan secara on-site di Universitas
+                                    Pelita Harapan Main Campus, Lippo Village.
                                 </p>
                             </div>
                             <div class="contest-home-btns">
@@ -85,7 +80,7 @@
                                     >Daftar Sekarang</a
                                 >
                                 <a
-                                    href="https://drive.google.com/file/d/1yr84POm9m-02BxCUgD7WiVxZCei9AMGa/view?usp=sharing"
+                                    href="https://drive.google.com/file/d/1XdHcJoKXbt-ZluEGYa2yZTPfctQ7S1OX/view?usp=sharing"
                                     target="_blank"
                                     class="contest-home-btn-second btn"
                                     >Download Rulebook</a
@@ -94,7 +89,7 @@
                         </div>
                         <div class="contest-home-cover">
                             <img
-                                src="../../assets/img/Logo Lomba/Falcon Logic.png"
+                                src="../../assets/img/Logo Lomba/Falcon Web Design.png"
                                 alt=""
                             />
                         </div>
@@ -108,41 +103,47 @@
                         <div class="timeline-title">
                             <div class="section-title">TIMELINE</div>
                             <div class="section-subtitle">
-                                Timeline Falcon Logic Competition
+                                Timeline Falcon Web Design
                             </div>
                         </div>
                         <div class="section-desc timeline-desc">
-                            Tahapan Lomba Falcon Logic Competition terdiri dari
+                            Tahapan Lomba Falcon Project 12 terdiri dari
                         </div>
                     </div>
                     <div class="timeline-main">
                         <span class="timeline-middle-line"> </span>
                         <div class="timeline-item">
                             <h4 class="timeline-item-title">
-                                Pendaftaran(Early Bird)
+                                Pendaftaran (Early Bird)
                             </h4>
                             <span class="timeline-rounded">
                                 <div class="timeline-rounded-center"></div>
                             </span>
-                            <div class="timeline-item-date">26 Sep - 9 Oct</div>
+                            <div class="timeline-item-date">
+                                26 Sep - 23 Oct
+                            </div>
                         </div>
                         <div class="timeline-item">
                             <h4 class="timeline-item-title">
-                                Pendaftaran(Normal)
+                                Pendaftaran (Normal)
                             </h4>
                             <span class="timeline-rounded">
                                 <div class="timeline-rounded-center"></div>
                             </span>
-                            <div class="timeline-item-date">9 Oct - 23 Oct</div>
+                            <div class="timeline-item-date">
+                                24 Oct - 13 Nov
+                            </div>
                         </div>
                         <div class="timeline-item">
                             <h4 class="timeline-item-title">
-                                Babak Benyisihan (online)
+                                Batas Pengumpulan (Penyisihan)
                             </h4>
                             <span class="timeline-rounded">
                                 <div class="timeline-rounded-center"></div>
                             </span>
-                            <div class="timeline-item-date">26 Oct</div>
+                            <div class="timeline-item-date">
+                                14 Nov - 19 Nov
+                            </div>
                         </div>
                         <div class="timeline-item">
                             <h4 class="timeline-item-title">
@@ -151,16 +152,7 @@
                             <span class="timeline-rounded">
                                 <div class="timeline-rounded-center"></div>
                             </span>
-                            <div class="timeline-item-date">3 Nov</div>
-                        </div>
-                        <div class="timeline-item">
-                            <h4 class="timeline-item-title">
-                                Technical Meeting
-                            </h4>
-                            <span class="timeline-rounded">
-                                <div class="timeline-rounded-center"></div>
-                            </span>
-                            <div class="timeline-item-date">5 Nov</div>
+                            <div class="timeline-item-date">23 Nov</div>
                         </div>
                         <div class="timeline-item">
                             <h4 class="timeline-item-title">
@@ -169,7 +161,7 @@
                             <span class="timeline-rounded">
                                 <div class="timeline-rounded-center"></div>
                             </span>
-                            <div class="timeline-item-date">7 Nov & 8 Nov</div>
+                            <div class="timeline-item-date">1 Dec</div>
                         </div>
                     </div>
                 </div>
@@ -184,12 +176,12 @@
                         <div class="registration-title-wrapper">
                             <h4 class="section-title">REGISTRATION</h4>
                             <h2 class="section-subtitle">
-                                Pendaftaran Lomba Falcon Logic Competition
+                                Pendaftaran Lomba Falcon Web Design Competition
                             </h2>
                         </div>
                         <p class="section-desc">
                             Adapun rincian harga pendaftaran dari lomba
-                            <b><i>Falcon Logic Competition</i></b>
+                            <b><i>Falcon Web Design Competition</i></b>
                         </p>
                     </div>
 
@@ -197,14 +189,14 @@
                         <div class="registration-prize-wrapper">
                             <p class="registration-prize-title">Early Bird :</p>
                             <h2 class="registration-prize-prize">
-                                Rp.60.000,-
+                                Rp.125.000,-
                             </h2>
                         </div>
                         <div class="registration-prize-line"></div>
                         <div class="registration-prize-wrapper">
                             <p class="registration-prize-title">Normal :</p>
                             <h2 class="registration-prize-prize">
-                                Rp.80.000,-
+                                Rp.155.000,-
                             </h2>
                         </div>
                     </div>
@@ -232,7 +224,7 @@
                                 </div>
                                 <div class="prizepool-prize-wrapper">
                                     <h2 class="prizepool-prize text-price-dark">
-                                        Rp.3.000.000,-
+                                        Rp.4.000.000,-
                                     </h2>
                                 </div>
                             </div>
@@ -246,7 +238,7 @@
                                 </div>
                                 <div class="prizepool-prize-wrapper">
                                     <h2 class="prizepool-prize text-price-dark">
-                                        Rp.2.000.000,-
+                                        Rp.2.500.000,-
                                     </h2>
                                 </div>
                             </div>
@@ -262,7 +254,7 @@
                                     <h2
                                         class="prizepool-prize text-price-light"
                                     >
-                                        Rp.1.000.000,-
+                                        Rp.1.500.000,-
                                     </h2>
                                 </div>
                             </div>
