mengganti href pada tombol home

--- a/falcon-business-proposal/index.html
+++ b/falcon-business-proposal/index.html
@@ -24,9 +24,7 @@
                 /></a>
 
                 <div class="nav-btns">
-                    <a href="../../index.html#competition" class="join-btn"
-                        >Home</a
-                    >
+                    <a href="../../#competition" class="join-btn">Home</a>
                     <div class="nav-toggle d-none" id="nav-toggle">
                         <i class="uil uil-apps"></i>
                     </div>
