--- a/falcon-web-design/index.html
+++ b/falcon-web-design/index.html
@@ -24,9 +24,7 @@
                 /></a>
 
                 <div class="nav-btns">
-                    <a href="../../index.html#competition" class="join-btn"
-                        >Home</a
-                    >
+                    <a href="../../#competition" class="join-btn">Home</a>
                     <div class="nav-toggle d-none d-none" id="nav-toggle">
                         <i class="uil uil-apps"></i>
                     </div>
@@ -80,7 +78,7 @@
                                     >Daftar Sekarang</a
                                 >
                                 <a
-                                    href="https://drive.google.com/file/d/1_dxyasAeL1lIkbZ1dycHJRI9b5QJOK9u/view?usp=sharing"
+                                    href="https://drive.google.com/file/d/1XdHcJoKXbt-ZluEGYa2yZTPfctQ7S1OX/view?usp=sharing"
                                     target="_blank"
                                     class="contest-home-btn-second btn"
                                     >Download Rulebook</a
@@ -136,7 +134,7 @@
                         </div>
                         <div class="timeline-item">
                             <h4 class="timeline-item-title">
-                                Batas Pengumpulan (Penyisihan)
+                                Batas Pengumpulan
                             </h4>
                             <span class="timeline-rounded">
                                 <div class="timeline-rounded-center"></div>
